change the website

--- a/_bibliography/journals.bib
+++ b/_bibliography/journals.bib
@@ -13,6 +13,7 @@ volume={18},
 thumb={tii_laptop.jpg},
 number={8},
 pages={5338-5347},
+selected={true},
 doi={10.1109/TII.2021.3125449},
 pdf={TII_2022.pdf},
        link={http://jialiangfan.com/tii}
@@ -28,7 +29,8 @@ journal={IEEE Transactions on Industrial Electronics},
  volume={69},
  number={10},
  pages={10301-10310},
-  thumb={tie_laptop.jpg},
+thumb={tie_laptop.jpg},
+ selected={true},
  doi={10.1109/TIE.2022.3165279},
   html={https://ieeexplore.ieee.org/document/9756321/},
  link={http://jialiangfan.com/tie},
@@ -44,6 +46,7 @@ pdf={TIE_2022},
    publisher={IEEE},
   pages={2134-2144},
   thumb={tsmc.jpg},
+  selected={true},
   abstract={Currently, the Newton–Raphson iterative algorithm has been extensively employed in the fields of basic research and engineering. However, when noise components exist in a system, its performance is largely affected. To remedy shortcomings that the conventional computing methods have encountered in a noisy workspace, a novel modified Newton integration (MNI) algorithm is proposed in this article. In addition, the steady-state error of the proposed MNI algorithm is smaller than that of the Newton–Raphson algorithm under a noise-free or noisy workspace. To lay the foundations for the corresponding theoretical analyses, the proposed MNI algorithm is first converted into a homogeneous linear equation with a residual term. Then, the related theoretical analyses are carried out, which indicate that the MNI algorithm possesses noise-tolerance ability under various noisy environments. Finally, multiple computer simulations and physical experiments on robot control applications are performed to verify the feasibility and advantage of the proposed MNI algorithm.},
   doi={10.1109/TSMC.2021.3049386},
   html={https://ieeexplore.ieee.org/document/9330770},
