change the website

--- a/_bibliography/journals.bib
+++ b/_bibliography/journals.bib
@@ -8,7 +8,7 @@ journal={IEEE Transactions on Industrial Informatics},
 title={Data-Driven Motion-Force Control Scheme for Redundant Manipulators: A Kinematic Perspective},
 year={2022},
 publisher={IEEE},
-abstract={We present the design and implementation of a taskable reactive mobile manipulation system. In contrary to related work, we treat the arm and base degrees of freedom as a holistic structure which greatly improves the speed and fluidity of the resulting motion. At the core of this approach is a robust and reactive motion controller which can achieve a desired end-effector pose, while avoiding joint position and velocity limits, and ensuring the mobile manipulator is manoeuvrable throughout the trajectory. This can support sensor-based behaviours such as closed-loop visual grasping. As no planning is involved in our approach, the robot is never stationary thinking about what to do next. We show the versatility of our holistic motion controller by implementing a pick and place system using behaviour trees and demonstrate this task on a 9-degree-of-freedom mobile manipulator.},
+abstract={Redundant manipulators play a critical role in industry and academia, which can be controlled from the kinematic or dynamic perspective. The motion-force control of redundant manipulators is a core problem in robot control, especially for the task requiring keeping contact with objectives, such as cutting, polishing, deburring, etc. However, when a manipulator’s model structure is unknown, it is challenging to take motion-force control of redundant manipulators. This article proposes a data-driven-based motion-force control scheme, which solves the motion-force control problem from the kinematic perspective. The scheme can take effect and estimate the structure information, i.e., the model parameters involved in the forward kinematics when the structure of the manipulator is incomplete or unknown. A recurrent neural network is devised to find the solution to the scheme. Besides, the theoretical analysis is presented to prove the correctness of the scheme. Simulations and physical experiments running on seven degrees of freedom redundant manipulators illustrate the superb performance and practicability of the scheme intuitively. The key contribution of this article is that, for the first time, a motion-force control scheme aided with data-driven technology is proposed from a kinematic perspective for the redundant manipulators.},
 volume={18},
 thumb={tii_laptop.jpg},
 number={8},
@@ -16,7 +16,7 @@ pages={5338-5347},
 selected={true},
 doi={10.1109/TII.2021.3125449},
 pdf={TII_2022.pdf},
-       link={http://jialiangfan.com/tii}
+       link={/publications/tii}
        }
 
 @article{TIE,
@@ -33,7 +33,7 @@ thumb={tie_laptop.jpg},
  selected={true},
  doi={10.1109/TIE.2022.3165279},
   html={https://ieeexplore.ieee.org/document/9756321/},
- link={http://jialiangfan.com/tie},
+ link={/publications/tie},
 pdf={TIE_2022},
  }
 @ARTICLE{TSMC,
@@ -45,7 +45,7 @@ pdf={TIE_2022},
   number={4},
    publisher={IEEE},
   pages={2134-2144},
-  thumb={tsmc.jpg},
+  thumb={tmsc.jpg},
   selected={true},
   abstract={Currently, the Newton–Raphson iterative algorithm has been extensively employed in the fields of basic research and engineering. However, when noise components exist in a system, its performance is largely affected. To remedy shortcomings that the conventional computing methods have encountered in a noisy workspace, a novel modified Newton integration (MNI) algorithm is proposed in this article. In addition, the steady-state error of the proposed MNI algorithm is smaller than that of the Newton–Raphson algorithm under a noise-free or noisy workspace. To lay the foundations for the corresponding theoretical analyses, the proposed MNI algorithm is first converted into a homogeneous linear equation with a residual term. Then, the related theoretical analyses are carried out, which indicate that the MNI algorithm possesses noise-tolerance ability under various noisy environments. Finally, multiple computer simulations and physical experiments on robot control applications are performed to verify the feasibility and advantage of the proposed MNI algorithm.},
   doi={10.1109/TSMC.2021.3049386},
